objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Nonbinary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Id__c</fullName>
        <label>Donor Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Eastern_Orthodox</fullName>
                    <label>Eastern Orthodox</label>
                </value>
                <value>
                    <fullName>Episcopalian</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>Mormon</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pentecostal</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
                <value>
                    <fullName>Quaker</fullName>
                </value>
                <value>
                    <fullName>Roman_Catholic</fullName>
                    <default>true</default>
                    <label>Roman Catholic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Years__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) ,
  IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate ),
     YEAR (Today()) - YEAR ( Birthdate ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age - Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Flag__c</fullName>
        <label>Sync Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Households__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parish ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Parish ID)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Remarks__c</fullName>
        <label>General Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <description>Date the donor, student, or child graduated from the affiliated school.</description>
        <inlineHelpText>Date the donor, student, or child graduated from the affiliated school. Enter as YYYY.</inlineHelpText>
        <label>Graduation Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Frequency__c</fullName>
        <label>Envelope Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Envelope_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidential_Remarks__c</fullName>
        <label>Confidential Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accessibility_Special_Needs__c</fullName>
        <description>Details of accessibility or special needs requested of the donor or family member.</description>
        <inlineHelpText>Details of accessibility or special needs requested of the donor or family member.</inlineHelpText>
        <label>Accessibility / Special Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alumnus_of_Affiliated_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Donor contact is an alumnus of the affiliated school or location.</description>
        <inlineHelpText>Did this person graduate from the affiliated school?</inlineHelpText>
        <label>Alumnus of Affiliated School</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
</CustomObject>